<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JnJBridgeToEmployment</string>
    <string name="hello_world">Hello world native!</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">1512119682333883</string>
    <string name="login">Login with Facebook</string>
    <string name="login_Status">You are not logged in</string>
    <string name="show_more">Show More</string>
    <string name="large_desc">…</string>
    <string name="menu_settings">Settings</string>
    <string name="group_id">505668282896958</string>
    <string name="group_name">BTE North Plainfield Highschool</string>
    <string name="group_header">Bridge To Employment</string>
    <string name="members_header">Members</string>
    <string name="events">Events</string>
    <string name="progress_loginfb">Communicating with Facebook server.</string>
    <string name="progress_login">Please wait while logging in.</string>
    <string name="alert_no_internet">Please Check your internet connection.</string>
    <string name="facebook_login_text">You are logged in Facebook as</string>
    <string name="facebook_not_authorized">You are not an Authorized person.</string>
    <string name="facebook_not_bte_group">You are not the part of BTE Group.</string>
    <string name="progress_announcements">Please wait while fetching anouncements.</string>
    <string name="progress_groups_events">Please wait while fetching Members and Events.</string>
    <string name="progress_events_list">Please wait while fetching events list.</string>
    <string name="event_details__attendees">Attendees</string>
    <string name="event_details__attendee_list">View attendee list</string>
    <string name="OK">OK</string>
    <string name="organized_by">"Organized by "</string>
    <string name="future_event">Future Event</string>
    <string name="not_specified">Not Specified</string>
    <string name="attendees">Attendees</string>
    <string name="view_attendee">"View attendee list"</string>
    <string name="rsvp">RSVP</string>
    <string name="post_to_event">Post To Event</string>
    <string name="error">Error</string>
    <string name="error_message">error connecting server!!</string>
    <string name="error_message_permission">Permission is either not granted or has been removed</string>
    <string name="close">Close</string>
    <string name="progress_attendeeslist">Please wait while fetching attendees list.</string>
    <string name="progress_eventdetails">Please wait while fetching event details.</string>
    <string name="progress_updatingrsvp">Please wait while updating RSVP status.</string>
    <string name="attending">ATTENDING</string>
    <string name="usure">UNSURE</string>
    <string name="declined">DECLINE</string>
    <string name="notreplied">NOT REPLIED</string>
    <string name="submitfeedback">Submit Feedback</string>
    <string name="feedback"> Feedback</string>
    <string name="posttoevent">Post To Event</string>
    <string name="successfuly_updated_the_rsvp_status">Successfuly updated the rsvp status.</string>
    <string name="eror_updating_the_rsvp_status">Error while updating the rsvp status.</string>
    <string name="message_passed">This event has passed.</string>
    <string name="message_post">Successfully posted on event.</string>
    <string name="alert_message_post">Text is empty.</string>
    <string name="message_posting">message posting.</string>
    <string name="selct_feedbackoption">Please select.</string>
    <string name="request_to_joingroup">Request to Join Group</string>
    <string name="alert_organizer_rsvp">Organizer cannot change RSVP status</string>
    <string name="alert_offline_mode">Using app in offline mode</string>
    <string name="alert_offline_logout">Cannot logout in offline mode, exiting app.</string>
    <string name="alert_offline_not_available">This feature not available in offline mode</string>
    <string name="alert_offline_message">Please visit this feature in online mode to make it available in offline mode</string>

</resources>